Fix submenu items overflowing

--- a/css/sp123-omega.styles.css
+++ b/css/sp123-omega.styles.css
@@ -1238,7 +1238,8 @@ form#user-login, form#user-pass {
       margin-right: 10px;
       margin-left: -17px; }
     #block-superfish-1 #superfish-1-accordion li.menuparent > ul {
-      padding-left: 10px; }
+      padding-left: 10px;
+      box-sizing: border-box; }
       #block-superfish-1 #superfish-1-accordion li.menuparent > ul > li:last-child {
         border-radius: 0px; }
         #block-superfish-1 #superfish-1-accordion li.menuparent > ul > li:last-child a {
